# privatemarkets

./: .dockerignore  .gitignore  404.html  Dockerfile  LICENSE-CC-BY-4.0  LICENSE-MIT  README.md  compose.yaml  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml  publish.yml  validate.yml
firm-types/: index.html
firm-types/allocator/: index.html
firm-types/fund-manager/: index.html
firm-types/general-partner/: index.html
fund-structures/: index.html
fund-structures/closed-end-fund/: index.html
schemas/: glossary-term.schema.json
search/: search_index.json
src/privatemarkets/: __init__.py  loader.py  models.py
src/privatemarkets/glossary/: index.md
src/privatemarkets/glossary/firm-types/: allocator.md  fund-manager.md  general-partner.md  index.md
src/privatemarkets/glossary/fund-structures/: closed-end-fund.md  index.md
tests/: test_loader.py
