[project]
name = "privatemarkets"
version = "0.0.2"
description = "Open Private Markets (OPM) — shared, open infrastructure for the private markets industry. This package provides the reference vocabulary; more components to follow."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT AND CC-BY-4.0"
license-files = ["LICENSE-MIT", "LICENSE-CC-BY-4.0"]
authors = [
    { name = "Sean Henney", email="henneysean@outlook.com" }
]
keywords = ["private markets", "finance", "vocabulary", "ontology", "reference data"]
dependencies = [
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://openprivatemarkets.org"
Repository = "https://github.com/seanhenney/privatemarkets"
Documentation = "https://openprivatemarkets.org"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build]
# Prevent accidental publishing of local/sensitive docs in source distributions.
exclude = [
    "opm 2.md",
    "*.local.md",
    ".uv-cache/**",
    ".venv/**",
    "dist/**",
    "site/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/privatemarkets"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "mkdocs>=1.6.1",
    "mkdocs-backlinks>=0.9.1",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-material>=9.6",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "types-pyyaml>=6.0.12.20260408",
]
